<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ConstraintActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_page_using"
            android:textColor="@color/text_purple"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/constraint_layout_title"
            android:textColor="@color/text_teal"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvHelloWorld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hello_world"
            android:textColor="@color/text_dark_purple"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/home_bg"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_directions"
            app:tint="@color/button_teal"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:backgroundTint="@color/fab_teal"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fabMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/button_teal" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:backgroundTint="@color/fab_teal"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/btn_minus"
        app:tint="@color/button_teal" />

</androidx.constraintlayout.widget.ConstraintLayout>